tests/errors/surf_exc_05.ki
# unpacking into index targets with the wrong count is an arity error
var xs = [0, 0]
xs[0], xs[1] = 1, 2, 3
